--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="shortcut icon" href="./pics/ico/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
@@ -23,18 +23,7 @@
 </head>
 
 <body>
-    <!--     <header class="gray-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <nav class="breadcrumb">
-                        <a class="breadcrumb-item" href="./index.html">Főoldal</a>
-                        <span class="breadcrumb-item active">Kapcsolat</span>>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header> -->
+
     <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
         <div class="container">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,97 +86,95 @@
 
     <main>
         <div class="container">
-            <div class=" col-md-12 text-dark bg-secondary " id="backgroundPicture ">
 
-
-                <fieldset class=".flex-column">
-                    <span class="contactpieces">
+            <fieldset>
+                <span class="contactpieces ">
                         Vegye fel velünk a kapcsolatot:<br />
                         <a href = "https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src = "./pics/ico/fb_black_50x50.png " alt = "Facebook "><br>
                             <strong>Facebook</strong></a>
                       </span>
-                    <hr>
-                    <span class="contactpieces ">
+                <hr>
+                <span class="contactpieces ">
                         <img  src="./pics/ico/phone_50x50.png " alt="Image "><br />
                         <b>06-20-482-3933</b><br />
                     </span>
-                    <hr>
-                    <span class="contactpieces ">
+                <hr>
+                <span class="contactpieces ">
                         Email küldése:<br />
                         <a href="mailto:valami@gmail.hu " target="_blank ">
                         <img src="pics/ico/email-sign.png " title="Email a Gólyaműhelynek ">
                         </a>
                     </span>
 
-                </fieldset>
+            </fieldset>
 
-            </div>
+        </div>
         </div>
 
 
     </main>
-    <footer class="bg-info">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 m-footer-contact">
-                    <a class="navbar-brand" href="index.html">
+    <footer class="bg-info ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-6 col-md-3 m-footer-contact ">
+                    <a class="navbar-brand " href="index.html ">
 
                         <h4>Gólyaműhely</h4>
                         <h6>BUDAPEST, 2020</h6>
                     </a>
                 </div>
 
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-3 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
                         <li>
-                            <a href="olajfestmeny.html">Olajfestmény</a>
+                            <a href="olajfestmeny.html ">Olajfestmény</a>
                         </li>
                         <li>
-                            <a href="grafika.html">Grafika</a>
+                            <a href="grafika.html ">Grafika</a>
                         </li>
                         <li>
-                            <a href="mozaik.html">Mozaik</a>
+                            <a href="mozaik.html ">Mozaik</a>
                         </li>
                         <li>
-                            <a href="butor.html">Bútor</a>
+                            <a href="butor.html ">Bútor</a>
                         </li>
                         <li>
-                            <a href="mese.html">Mese</a>
+                            <a href="mese.html ">Mese</a>
                         </li>
                     </ul>
                 </div>
 
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-3 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
                         <li>
-                            <a href="restauralas.html">Restaurálás</a>
+                            <a href="restauralas.html ">Restaurálás</a>
                         </li>
                         <li>
-                            <a href="mesegrafika.html">Mesegrafika</a>
+                            <a href="mesegrafika.html ">Mesegrafika</a>
                         </li>
                     </ul>
                 </div>
 
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-3 m-footer-nav ">
                     <strong>Információ</strong>
                     <ul>
 
                         <li>
-                            <a href="bemutatkozas.html">Bemutatkozás</a>
+                            <a href="bemutatkozas.html ">Bemutatkozás</a>
                         </li>
                         <li>
-                            <a href="gyik.html">Kérdések és válaszok</a>
+                            <a href="gyik.html ">Kérdések és válaszok</a>
                         </li>
                         <li>
-                            <a href="linkek.html">Linkek</a>
+                            <a href="linkek.html ">Linkek</a>
                         </li>
                         <li>
-                            <a href="ajandekok.html">Ajándéktárgyak</a>
+                            <a href="ajandekok.html ">Ajándéktárgyak</a>
                         </li>
                         <li>
-                            <a href="kedvencek.html">Kedvencek</a>
+                            <a href="kedvencek.html ">Kedvencek</a>
                         </li>
 
                     </ul>
@@ -202,8 +189,10 @@
 
 
     <script src="./js/jquery-3.1.1.slim.min.js "></script>
-    <srcipt src="./js/tether.min.js "></srcipt>
-    <script src="./js/bootstrap.min.js "></script>
+    <script src="./js/tether.min.js ">
+    </script>
+    <script src="./js/bootstrap.min.js ">
+    </script>
     <script src="./js/app.js "></script>
     <script src="./js/bootstrap.js "></script>
     <script src="./js/index.js "></script>
